tests/paczka2/big_fuzzy/15890042.err
Error in line 1: 4dKK7YD6 A901 29,4
Error in line 5: SCy4J1rB A901 90,1
Error in line 6: SCy4J1rB S606 42,8
Error in line 9: IFwL A901 82,0
Error in line 2: M8REdGy8no S606 47,8
Error in line 13: SCy4J1rB S606 45,8
Error in line 17: Smsq8p A901 90,3
Error in line 24: SCy4J1rB A901 6,8
Error in line 29: IFwL A901 32,5
Error in line 27: SCy4J1rB S606 29,0
Error in line 26: Smsq8p A150 79,7
Error in line 35: SCy4J1rB A130 57,5
Error in line 44: IFwL S606 86,3
Error in line 68: M8REdGy8no A901 417,59
Error in line 78: Smsq8p A901 25,7
Error in line 61: IFwL A130 41,1
Error in line 79: Smsq8p A150 65,5
Error in line 87: Smsq8p A~01 2~,1
Error in line 86: Smsq8p A901 8,4
Error in line 94: IFwL A150 75,2
Error in line 92: 4dKK7YD6 S606 65,9
Error in line 100: M8REdGy8no S606 28,1
Error in line 104: 4dKK7YD6 A130 98,5
Error in line 111: Smsq8p A901 45,6
Error in line 121: SDFtjXMgge A150 97,0
Error in line 114: SCy4J1rB A150 97,7
Error in line 128: SCy4J1rB S606 86,4
Error in line 132: IFwL A901 78,5
Error in line 135: SDFtjXMgge A130 4,1
Error in line 137: SCy4J1rB S606 13,6
Error in line 161: SCy4J1rB A150 74,8
Error in line 146: A130 A901 7,7
Error in line 152: Smsq8p S606 60,0
Error in line 163: SCy4J1rB A901 98,1
Error in line 194: M8REdGy8no S606 95,3
Error in line 195: M8REdGy8no A150 66,6
Error in line 201: 4dKK7YD6 A15 151,4
Error in line 171: A130 A130 310,5
Error in line 217: M8REdGy8no A130 19,51
Error in line 208: M8REdGy8no S606 221,0
Error in line 218: M8REdGy8no A130 75,4
Error in line 231: Smsq8p S606 212,9
Error in line 234: Smsq8p A150 79,5
Error in line 237: Smsq8p S606 65,9
Error in line 226: IFwL A150 48,7
